News UAT/force-app/main/default/objects/Activity/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <formula>Owner:User.Team__c</formula>
    <label>Team</label>
    <type>Text</type>
</CustomField>