News UAT/force-app/main/default/objects/Activity/fields/Time_Taken_To_Complete_Hours__c.field-meta.xml
<CustomField>
    <fullName>Time_Taken_To_Complete_Hours__c</fullName>
    <formula>(Completed_Date_Time__c - CreatedDate) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Taken To Complete(Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>