News UAT/force-app/main/default/objects/Activity/fields/Time_To_Complete__c.field-meta.xml
<CustomField>
    <fullName>Time_To_Complete__c</fullName>
    <description>Time to complete this task in minutes</description>
    <formula>(Completed_Date_Time__c - CreatedDate) * 24 * 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time To Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>