News UAT/force-app/main/default/objects/Activity/fields/Usable_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Usable_Due_Date__c</fullName>
    <description>So that Task Due Date can be used in validations, formulas, reports. Populated via trigger.</description>
    <label>Usable Due Date</label>
    <type>Date</type>
</CustomField>