News UAT/force-app/main/default/objects/Activity/fields/Usable_Due_Date_Past__c.field-meta.xml
<CustomField>
    <fullName>Usable_Due_Date_Past__c</fullName>
    <formula>Usable_Due_Date__c  &lt;=  TODAY()</formula>
    <label>Usable Due Date Past</label>
    <type>Checkbox</type>
</CustomField>