News UAT/force-app/main/default/objects/Activity/fields/Wrap_Up_Reason__c.field-meta.xml
<CustomField>
    <fullName>Wrap_Up_Reason__c</fullName>
    <description>Wrap Up Reason for Task</description>
    <label>Wrap Up Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amend Ad</fullName>
            </value>
            <value>
                <fullName>Cancel Ad</fullName>
            </value>
            <value>
                <fullName>Enquiry</fullName>
            </value>
            <value>
                <fullName>Feedback</fullName>
            </value>
            <value>
                <fullName>Follow Up</fullName>
            </value>
            <value>
                <fullName>New Ad</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>Rebook Ad</fullName>
            </value>
            <value>
                <fullName>Transfer external</fullName>
            </value>
            <value>
                <fullName>Transfer internal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>