News UAT/force-app/main/default/objects/Activity/fields/Wrap_up_Sub_Reason__c.field-meta.xml
<CustomField>
    <fullName>Wrap_up_Sub_Reason__c</fullName>
    <label>Wrap up Sub Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Wrap_Up_Reason__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Achieved Initial Objective</fullName>
            </value>
            <value>
                <fullName>Awaiting Decision</fullName>
            </value>
            <value>
                <fullName>Awaiting Influencer</fullName>
            </value>
            <value>
                <fullName>Awaiting News Approval</fullName>
            </value>
            <value>
                <fullName>Branding</fullName>
            </value>
            <value>
                <fullName>Change Publication or Frequency</fullName>
            </value>
            <value>
                <fullName>Complaint- DRS Case Raised</fullName>
            </value>
            <value>
                <fullName>Complaint - Resolved</fullName>
            </value>
            <value>
                <fullName>Complaint -Transfer CR</fullName>
            </value>
            <value>
                <fullName>Compliment</fullName>
            </value>
            <value>
                <fullName>Confirm Details</fullName>
            </value>
            <value>
                <fullName>Copy or Image</fullName>
            </value>
            <value>
                <fullName>CR</fullName>
            </value>
            <value>
                <fullName>Cust Request Initial Rep</fullName>
            </value>
            <value>
                <fullName>Deadlines</fullName>
            </value>
            <value>
                <fullName>Decision Maker Unavailable</fullName>
            </value>
            <value>
                <fullName>Distribution</fullName>
            </value>
            <value>
                <fullName>Enhanced solution</fullName>
            </value>
            <value>
                <fullName>Enquiry about Payment</fullName>
            </value>
            <value>
                <fullName>Error in Ad</fullName>
            </value>
            <value>
                <fullName>Finalise Payment</fullName>
            </value>
            <value>
                <fullName>Growing Business</fullName>
            </value>
            <value>
                <fullName>Internal Error</fullName>
            </value>
            <value>
                <fullName>Maintain Presence</fullName>
            </value>
            <value>
                <fullName>Material</fullName>
            </value>
            <value>
                <fullName>New Product or Service</fullName>
            </value>
            <value>
                <fullName>NFSS</fullName>
            </value>
            <value>
                <fullName>No Changes</fullName>
            </value>
            <value>
                <fullName>Official Enquiry</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>