News UAT/force-app/main/default/objects/Activity/listViews/Annie_View.listView-meta.xml
<ListView>
    <fullName>Annie_View</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>TASK.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>Pfeiffer</value>
    </filters>
    <label>Annie View</label>
    <sharedTo/>
</ListView>