News UAT/force-app/main/default/objects/Activity/listViews/MyActivities.listView-meta.xml
<ListView>
    <fullName>MyActivities</fullName>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.TYPE</columns>
    <columns>TASK.SUBJECT</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>ksaredak</value>
    </filters>
    <filters>
        <field>ACTIVITY.TASK</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Activities</label>
</ListView>